--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ torchvision = "^0.15.2"
 japanize-matplotlib = "^1.1.3"
 openpyxl = "^3.1.2"
 plotly-express = "^0.4.1"
+tqdm = "^4.65.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -25,6 +26,7 @@ black = "^23.3.0"
 flake8 = "^6.0.0"
 mypy = "^1.2.0"
 isort = "^5.12.0"
+ipykernel = "^6.23.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
